kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loki-feishu_webhook
  name: loki-feishu_webhook
  namespace: alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki-feishu_webhook
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loki-feishu_webhook
    spec:
      containers:
      - env:
        - name: TZ
          value: Asia/Shanghai
        - name: FEISHU_WEBHOOK_URL
          value: "https://open.feishu.cn/open-apis/bot/v2/hook/xxxxxxxxxxxxxxxxxxx"
        - name: FEISHU_SECRET
          value: "xxxxxxxxxxxxxxxxx"
        - name: HOST
          value: "0.0.0.0"
        - name: PORT
          value: "8000"
        - name: MYSQL_HOST
          value: "xxxxxxxxxxx"
        - name: MYSQL_DB
          value: "xxxxxxxx"
        - name: MYSQL_USER
          value: "xxxxx"
        - name: MYSQL_PSWD
          value: "xxxxxxx"
        image: r.iop88.cn/aneng/loki-feishu-alert:v4.0
        imagePullPolicy: Always
        lifecycle: {}
        livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 2
        name: loki-feishu_webhook
        ports:
        - containerPort: 8000
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 1
            memory: 1024Mi
          requests:
            cpu: 200m
            memory: 256Mi
      restartPolicy: Always
