kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki-feishu_webhook
  name: loki-feishu_webhook-svc
  namespace: alert
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: loki-feishu_webhook
  sessionAffinity: None
  type: ClusterIP
