kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /alert
  name: loki-feishu_webhook
  namespace: alert
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: loki-feishu_webhook-svc
                port:
                  number: 8000
            path: /example(/|$)(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - example.com
      secretName: example-tls-secret
